# Pine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  premake5.lua
.github/workflows/: build.yml  msbuild.yml
examples/: premake5.lua
examples/deferred/: CMakeLists.txt  main.cpp  premake5.lua
examples/immediately/: CMakeLists.txt  main.cpp  premake5.lua
pine/: CMakeLists.txt  premake5.lua
pine/include/: Event.hpp  EventBus.hpp  MemberFunctionHandler.hpp  Pine.hpp
pine/include/pine/: Event.hpp  EventBus.hpp  MemberFunctionHandler.hpp  Pine.hpp  empty.cpp
