cmake_minimum_required(VERSION 3.26)

project(Pine)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
    cmake_policy(SET CMP0141 NEW)
    set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

set(PINE_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/pine/include)

add_subdirectory(pine)

# Examples
add_subdirectory(examples/immediately)
